[package]
name = "arweave-ans-1040-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.10.1", features = ["json"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
base64 = "0.21"
clap = { version = "4.5.20", features = ["derive"] }
serde_avro_fast = "2"
serde_bytes = "0.11"
sha2 = "0.10"