[package]
name = "arweave-ans-1040-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
clap = { version = "4.5.20", features = ["derive"] }
serde_avro_fast = "2"
serde_bytes = "0.11"
sha2 = "0.10"
tokio-util = "0.7"
redb = "2.4"
rand = "0.8"


[dev-dependencies]
bincode = "1.3"
fastuuid = "0.3.0"